# molt-core-backend

./: .gitignore  README.md  alembic.ini  dashboard.html  docker-compose.yml  proyecto.toml  pyproject.toml
migrations/: env.py
migrations/versions/: 2d460bfc6290_init_core_tables.py
src/: main.py  seed.py
src/db/: redis.py  session.py
src/domain/: models.py  schemas.py
src/services/: ai_service.py  order_service.py  websocket_manager.py
